[package]
name = "my-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.22", features = ["full"] }
ntest = "0.9"
tempfile = "3.3"
env_logger = "0.9"
log = "0.4"
assignment-2-solution = { path = "../solution" }
my-test-utils = { path = "../my-test-utils" }

uuid = { version = "1.2", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
async-trait = "0.1"
async-channel = "1.7"
futures = "0.3"
rand = "0.8"
serial_test = "0.9"